syntax = "proto3";

package demoPB;
option go_package = ".;db";

message Book {
	int64 id  = 1;
	string title = 2;
	string topic=3;
    string author=4;
}

service BookService {
	//For now we'll try to implement "insert" operation.
	rpc get (GetBookRequest) returns (GetBookResponse);
}

message GetBookRequest{
    int64 id=1;
}
 
message GetBookResponse {
	Book listBook = 1;
	Error error = 2;
}
message Error {
	string code = 1;
	string message = 2;
}